fix: use overflow css property

--- a/src/skills-builder/skills-builder-modal/skillsBuilderModal.scss
+++ b/src/skills-builder/skills-builder-modal/skillsBuilderModal.scss
@@ -15,6 +15,9 @@ $breakpoint-medium: 992px;
       top: 0.5rem;
     }
   }
+  .overflow-scroll-medium {
+    overflow: scroll;
+}
 }
 
 .chip-max-width {
